# fastapi-template

./: .pre-commit-config.yaml  README.md  pyproject.toml
